--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <body>
         <h1>Rock, Paper, Scissors Game</h1>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
         <script src="script.js"></script>
     </body>
 
