index.html: use semantic tags style.css: implement flexbox

--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
     </head>
 
     <body>
-        <div class="flex-container">
+        <header class="header-container">
             <h1>Rock, Paper, Scissors Game</h1>
+        </header>
 
-            <div class="score-container">
-                <div id="human-score">Human score: <span id="human-score-value">0</span></div>
-                <div id="computer-score">Computer score: <span id="computer-score-value">0</span></div>
-            </div>
+        <main class="main-container">
+            <div class="game-container">
+                <div class="score-container">
+                    <div id="human-score">Human score: <span id="human-score-value">0</span></div>
+                    <div id="computer-score">Computer score: <span id="computer-score-value">0</span></div>
+                </div>
 
-            <div class="btn-container">
-                <button id="rock-btn" value="rock">Rock</button>
-                <button id="paper-btn" value="paper">Paper</button>
-                <button id="scissors-btn" value="scissors">Scissors</button>
+                <div class="btn-container">
+                    <button id="rock-btn" value="rock">Rock</button>
+                    <button id="paper-btn" value="paper">Paper</button>
+                    <button id="scissors-btn" value="scissors">Scissors</button>
+                </div>
             </div>
-            
-        </div>
+        </main>
+
+        <footer class="footer-container">
+            <h3>Copyright &copy; Paolo Soriano 2025</h3>
+        </footer>
 
         <script src="script.js"></script>
     </body>
