--- a/index.html
+++ b/index.html
@@ -16,14 +16,28 @@
         <main class="main-container">
             <div class="game-container">
                 <div class="score-container">
-                    <div id="human-score">Human score: <span id="human-score-value">0</span></div>
-                    <div id="computer-score">Computer score: <span id="computer-score-value">0</span></div>
+                    <div id="human-score">Human: <span id="human-score-value">0</span></div>
+                    <div id="computer-score">Computer: <span id="computer-score-value">0</span></div>
+                </div>
+
+                <div class="logo-container">
+                    <div class="human-logo">&#10068;</div>
+                    <div class="computer-logo">&#10068;</div>
                 </div>
 
                 <div class="btn-container">
-                    <button id="rock-btn" value="rock">Rock</button>
-                    <button id="paper-btn" value="paper">Paper</button>
-                    <button id="scissors-btn" value="scissors">Scissors</button>
+                    <button id="rock-btn" value="rock">
+                        <p>&#129704;</p>
+                        <p>Rock</p>
+                    </button>
+                    <button id="paper-btn" value="paper">
+                        <p>&#128195;</p>
+                        <p>Paper</p>
+                    </button>
+                    <button id="scissors-btn" value="scissors">
+                        <p>&#9986;&#65039;</p>
+                        <p>Scissors</p>
+                    </button>
                 </div>
             </div>
         </main>
