Display logo when a choice is chosen

--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
                 </div>
 
                 <div class="logo-container">
-                    <div class="human-logo">&#10068;</div>
-                    <div class="computer-logo">&#10068;</div>
+                    <div id="human-logo">&#10068;</div>
+                    <div id="computer-logo">&#10068;</div>
                 </div>
 
                 <div class="btn-container">
                     <button id="rock-btn" value="rock">
-                        <p>&#129704;</p>
+                        <p>&#x1FAA8;</p>
                         <p>Rock</p>
                     </button>
                     <button id="paper-btn" value="paper">
-                        <p>&#128195;</p>
+                        <p>&#x1F4C3;</p>
                         <p>Paper</p>
                     </button>
                     <button id="scissors-btn" value="scissors">
-                        <p>&#9986;&#65039;</p>
+                        <p>&#x2702;&#xFE0F;</p>
                         <p>Scissors</p>
                     </button>
                 </div>
